--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,9 @@
 <header>
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
-        <img class="img-responsive" src="img/profile.png" alt="profile-pic" />
+      <div class="col-lg-12 text-center">
+        <!-- 이미지 소스를 변경합니다 -->
+        <img class="profile-pic" src="/img/leesuyeon.jpeg" alt="profile-pic" />
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
@@ -13,3 +14,13 @@
     </div>
   </div>
 </header>
+
+<style>
+  .profile-pic {
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%; /* 이미지를 원형으로 만듭니다 */
+    width: 256px; /* 이미지 너비 */
+    height: 256px; /* 이미지 높이 */
+  }
+</style>
