--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <!-- 이미지 소스를 변경합니다 -->
-        <img class="profile-pic" src="/img/leesuyeon.jpeg" alt="profile-pic" />
+        <img class="profile-pic" src="/img/제목을 입력해주세요_-001.png" alt="profile-pic" />
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
           <hr class="star-light" />
