--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,21 +10,13 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <p>안녕하세요! 저는 이수연입니다. 파이썬을 주력으로 데이터 사이언티스트로 활동하고 있습니다.
-          또한, ADSP 데이터 준 전문가 자격을 취득하며, 데이터 분야에서의 심도 있는 전문 지식을 쌓아가고 있습니다. 새로운 연구와 도전에 대한 열정으로 항상 새로운 인사이트를 발견하려 노력하고
-          있습니다.
-          주요 프로젝트로는 [AI DATA 경진대회] 기차 대차 이상 소음원 위치 감지 AI 시스템 참여가 있습니다. 23년도에 K-Digital AI 활용 빅데이터분석 풀스택웹서비스 SW 개발자 양성과정
-          과 제로베이스 데이터 과정을 수료하며 데이터 사이언스와 웹 서비스 개발에 대한 전문 지식을 습득했습니다.
+          또한, ADSP 데이터 준 전문가 자격을 취득 데이터 분야에서의 심도 있는 전문 지식을 쌓아가고 있으며 
+          새로운 연구와 도전에 대한 열정으로 인사이트를 발견하려 노력하고 있습니다.
+          주요 프로젝트로는 [AI DATA 경진대회] 기차 대차 이상 소음원 위치 감지 AI 시스템 참여가 있습니다.
         </p>
       </div>
       <div class="col-lg-8 col-lg-offset-2">
-        <p>Hello! My name is Su-Yeon Lee, and I am a data scientist specializing in Python.
-          One of my major projects includes participating in the [AI DATA Competition] Train Bogie Fault Noise Source
-          Detection AI System. In 2023, I completed the K-Digital AI Utilization Big Data Analysis Full Stack Web
-          Service Software Developer Training Course and the Zerobase Data course, where I acquired expertise in data
-          science and web service development.
-          Additionally, I obtained the ADSP (Associate Data Science Professional) certification, deepening my
-          professional knowledge in the data field. With a passion for new research and challenges, I continuously
-          strive to discover new insights.
+        <p>Hello! My name is Sooyeon Lee, and I work as a data scientist specializing in Python. I've earned the ADSP (Advanced Data Analytics Semi-Professional) certification and continuously build expertise in the field of data science. I have a passion for discovering insights through new research and challenges.
         </p>
       </div>
     </div>
