--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body {
     overflow-x: hidden;
 }
@@ -22,7 +16,7 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #{{ site.color.primary }};
+    color: #18bc9c; /* 기본 색상 사용 */
 }
 
 h1,
@@ -64,15 +58,15 @@ hr.star-light {
 
 hr.star-light:after {
     color: #fff;
-    background-color: #{{ site.color.primary }};
+    background-color: #18bc9c; /* 기본 색상 사용 */
 }
 
 hr.star-primary {
-    border-color: #{{ site.color.secondary }};
+    border-color: #2c3e50; /* 기본 색상 사용 */
 }
 
 hr.star-primary:after {
-    color: #{{ site.color.secondary }};
+    color: #2c3e50; /* 기본 색상 사용 */
     background-color: #fff;
 }
 
@@ -83,7 +77,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #{{ site.color.primary }};
+    background: #18bc9c; /* 기본 색상 사용 */
 }
 
 header .container {
@@ -182,7 +176,7 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #{{ site.color.primary }};
+    background: #18bc9c; /* 기본 색상 사용 */
 }
 
 @media(max-width:767px) {
@@ -212,7 +206,7 @@ section.success {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba({{ site.color.primary-rgb }},.9);
+    background: rgba(24,188,156,.9); /* 기본 색상 사용 */
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -293,7 +287,7 @@ section.success {
 .btn-outline:active,
 .btn-outline.active {
     border: solid 2px #fff;
-    color: #{{ site.color.primary }};
+    color: #18bc9c; /* 기본 색상 사용 */
     background: #fff;
 }
 
@@ -346,7 +340,7 @@ section.success {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #{{ site.color.primary }};
+    color: #18bc9c; /* 기본 색상 사용 */
 }
 
 form .row:first-child .floating-label-form-group {
@@ -363,7 +357,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #{{ site.color.secondary }};
+    background-color: #2c3e50; /* 기본 색상 사용 */
 }
 
 footer .footer-col {
@@ -372,7 +366,7 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #{{ site.color.secondary-dark }};
+    background-color: #233140; /* 기본 색상 사용 */
 }
 
 .btn-social {
@@ -456,7 +450,7 @@ footer .footer-below {
     width: 1px;
     height: 75px;
     margin-left: 35px;
-    background-color: #{{ site.color.secondary }};
+    background-color: #2c3e50; /* 기본 색상 사용 */
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -466,14 +460,14 @@ footer .footer-below {
     z-index: 1052;
     width: 1px;
     height: 75px;
-    background-color: #{{ site.color.secondary }};
+    background-color: #2c3e50; /* 기본 색상 사용 */
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
 }
 
 .navbar-nav>.active>a {
-    background-color: #{{ site.color.secondary-dark }} !important;
+    background-color: #233140 !important; /* 기본 색상 사용 */
 }
 
 /* Fix modal mouse wheel issues */
@@ -481,4 +475,19 @@ footer .footer-below {
 .modal.fade.in {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
+}
+
+/* 추가한 스타일 */
+@media (min-width: 640px) {
+    .portfolio-flex-grid .portfolio-flex-row {
+      display: flex;
+      flex-flow: row wrap;
+      align-items: stretch;
+      justify-content: center; /* 중앙 정렬 */
+    }
+    .portfolio-flex-grid .portfolio-flex-row .portfolio-flex-item {
+      flex: 1 0 30%;
+      max-width: 30%;
+      margin: 10px; /* 여백 추가 */
+    }
 }
