--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -5,39 +5,49 @@
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
       <div class="lr">
-        <div class="rl">
-        </div>
+        <div class="rl"></div>
       </div>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
-            <h2>{{ post.title }}</h2>
+            <div class="text-center">
+              <h2>{{ post.title }}</h2>
+              <p class="item-intro text-muted">{{ post.description }}</p>
+            </div>
             <hr class="star-primary">
-            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-            {% if post.description %}
-            <p>{{ post.description }}</p>
-            {% endif %}
-            <ul class="list-inline item-details">
-              {% if post.client %}
-              <li>Client:
-                <strong>{{ post.client }}</strong>
-              </li>
+            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered img-left" alt="{{ post.alt }}">
+            <div class="text-left">
+              {% if post.description %}
+              <p>{{ post.description }}</p>
               {% endif %}
-              {% if post.project-date %}
-              <li>Date:
-                <strong>{{ post.project-date }}</strong>
-              </li>
-              {% endif %}
-              {% if post.category %}
-              <li>Service:
-                <strong>{{ post.category }}</strong>
-              </li>
-              {% endif %}
-            </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
+              <ul class="list-inline item-details">
+                {% if post.client %}
+                <li>Client:
+                  <strong>{{ post.client }}</strong>
+                </li>
+                {% endif %}
+                {% if post.project-date %}
+                <li>Date:
+                  <strong>{{ post.project-date }}</strong>
+                </li>
+                {% endif %}
+                {% if post.category %}
+                <li>Service:
+                  <strong>{{ post.category }}</strong>
+                </li>
+                {% endif %}
+              </ul>
+              <div>
+                {{ post.content | markdownify }}
+              </div>
+            </div>
+            <div class="btn-center">
+              <button type="button" class="btn btn-default" data-dismiss="modal">
+                <i class="fa fa-times"></i> Close
+              </button>
+            </div>
           </div>
         </div>
       </div>
