--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,10 @@
+<style>
+  .custom-btn {
+    padding: 5px 10px;
+    font-size: 12px;
+  }
+</style>
+
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
@@ -26,6 +33,9 @@
         </li>
         <li class="page-scroll">
           <a href="#contact">Contact</a>
+        </li>
+        <li class="page-scroll">
+          <a href="/files/my_portfolio.pdf" download class="btn btn-default custom-btn navbar-btn">Portfolio PDF</a>
         </li>
       </ul>
     </div>
