--- a/_includes/about.html
+++ b/_includes/about.html
@@ -25,6 +25,11 @@
         GitHub
       </a>
     </div>
+    <div class="col-lg-8 col-lg-offset-2 text-center">
+      <a href="https://leesuyeun.github.io" class="btn btn-lg btn-outline">
+        GitHubBlog
+      </a>
+    </div>
   </div>
   </div>
 </section>
